Improved search fields.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+- Default search from frontpage
+- Create search fields for user admin page
 - Obey pauses
 - Obey auto renewal
 - Obey lifetime membership
