--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-- user allocate groups roles
 - advanced search user page
 - Rename html size to stylesheet width in pixels
 - fix icons for subscriptions
 - add batch
+- update dynamic groups with a batch job
 
 - ticket coupon as group location
 - fix season subscription
