--- a/TODO.txt
+++ b/TODO.txt
@@ -26,6 +26,7 @@
 - make sure user see if a task has been locked
 - flag if we run backend script for tasks (to avoid long wait periods for the users)
 - unit test
+- special products, whoisonline, login attempts
 
 == security ==
 - cannot edit orders that you do not own
