--- a/TODO.txt
+++ b/TODO.txt
@@ -11,8 +11,6 @@
 - Obey lifetime membership
 - Update basket
 - fix product variants
-- use git more proper:
-  - add the club as a gitmodule
 - Fix shop as user
 - Shop coupons
 - translation
@@ -35,6 +33,7 @@
 - make sure css are validated
 - put images on links
 - if twig has no date, it prints current timestamp (tasks last run at)
+- might be able to have a flash globally on all pages
 
 == logging ==
 
