--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 == todo ==
 - events as ical/rss
-- advanced search user page
-  - list users in a group
+- create user filter
 - users should be able to add and remove address, email and phone
+- sort user lists
 - find a way to make company users
 - add batch
 - ticket coupon as group location
@@ -23,6 +23,7 @@
 - event custom validator ( more attend than max attends )
 - add flash on all pages with a form
 - add images to products
+- make a quick search field for users
 
 == tasks ==
 - make a task that remove from logging table
@@ -34,6 +35,7 @@
 - put images on links
 - if twig has no date, it prints current timestamp (tasks last run at)
 - might be able to have a flash globally on all pages
+- remove table sorting
 
 == logging ==
 
@@ -44,6 +46,17 @@
 
 == modules ==
 - mailer bundle
+  - send mails to specific user
+  - send mails to specific group
+  - create a filter and send mails to filtered group
+    - gender
+    - age
+    - city
+    - country
+    - active / inactive
+    - subscription
+    - ticket coupon
+    - location
 - team bundle
 - forum bundle
 - payment gateway bundle
@@ -52,7 +65,6 @@
 - booking bundle
 - integration til e-conomic
 - dashboard bundle
-- internal message bundle
 - export / import bundle
 - ranking bundle
 - cup bundle
@@ -61,3 +73,5 @@
 - wordpress bundle
 - api bundle
 - request member bundle
+- internal message bundle
+- statistic bundle
