--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 == todo ==
+- email and phone should not be mandatory
 - events as ical/rss
 - create user filter
 - users should be able to add and remove address, email and phone
@@ -18,7 +19,7 @@
 - make sure user see if a task has been locked
 - flag if we run backend script for tasks (to avoid long wait periods for the users)
 - unit test
-- special products, whoisonline, login attempts
+- special products
 - use syslog critical levels to logging system
 - event custom validator ( more attend than max attends )
 - add flash on all pages with a form
@@ -31,6 +32,7 @@
 
 == graphics ==
 - style product page
+- style product listing
 - make sure all pages are html validated
 - make sure css are validated
 - put images on links
@@ -76,3 +78,4 @@
 - request member bundle
 - internal message bundle
 - statistic bundle
+- whoisonline bundle
