--- a/TODO.txt
+++ b/TODO.txt
@@ -27,6 +27,7 @@
 - make a quick search field for users
 - rewrite all \Club\UserBundle\Entity\User to ClubUserBundle:User
 - rewrite all doctrine.orm.entity_manager to doctrine->getEntityManager()
+- success / failure handler has to be more dynamic
 
 == tasks ==
 
