--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 == todo ==
+- link on successpasswordhandler broken on demo.clubmaster.dk
 - make a quick search field for users
 - users should be able to disable types of email
   - types (password,info)
@@ -54,7 +55,7 @@
 - put images on links
 - if twig has no date, it prints current timestamp (tasks last run at)
 - might be able to have a flash globally on all pages
-- remove table sorting
+- remove table sorting, and class definition tablesorter
 - remove batch on all pages except user list
 
 == security ==
