--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 == todo ==
-- fint a way to track payments
+- seems like VAT calculation for order_products in wrong
+- make sure VAT account is right
+- only use name vat or name tax
+- find a way to track payments
 - only make a single subscription when order gets delivered
 - sort user lists
 - add batch to user list
@@ -31,6 +34,8 @@
 - add event managers to events, they should be able to see all events in the club
 - make sure tasks can by build with a dynamic event class
 - cannot have multiple is_cancelled or is_accepted status orders
+- find a way the bundles can add menu items to the menus
+  - menu, and priority
 
 == rewrite stuff ==
 - rewrite all \Club\UserBundle\Entity\User to ClubUserBundle:User
@@ -47,6 +52,8 @@
 == schema ==
 - cascade delete key on order delete to subscription and ticket coupon
 - cascade delete key on subscription to subscription location
+- unique config_key
+- consider using config_key and account_number as primary keys
 
 == graphics ==
 - event calendar view
