--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 == todo ==
-- seems like VAT calculation for order_products in wrong
+- debt account
 - only make a single subscription when order gets delivered
 - sort user lists
 - add batch to user list
