--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,31 @@
-== todo ==
-- translation
+== before next release ==
+- doctrine migrations
+- doctrine fixtures
+- installer
+- build better forms for filter
 - cannot have multiple is_cancelled or is_accepted status orders
 - sort user lists
 - add batch to user list
-- Obey lifetime membership
 - add images to products
 - add pager to logging
 - add pager to ledger
 - add pager to order
 - add search to order
+- event custom validator ( more attend than max attends )
+- make a task that check if a task has been running for more than 15 minutes
+- consider subscription attributes instead of multiple columns
+- rewrite default settings for language and accounts
+- cascade delete key on order delete to subscription and ticket coupon
+- cascade delete key on subscription to subscription location
+- unique config_key
+- style product page
+- style product listing
+- put images on links
+- fix layout, single and double column
 
-- build better forms for filter
+== todo ==
+- translation
+- Obey lifetime membership
 - make a quick search field for users
 - users should be able to disable types of email
   - types (password,info)
@@ -24,7 +39,6 @@
 - database email delivery strategy
 - unit test
 - special products
-- event custom validator ( more attend than max attends )
 - group and user filter, is_active (true, false, both)
 - add event managers to events, they should be able to see all events in the club
 - make sure tasks can by build with a dynamic event class
@@ -33,35 +47,24 @@
 
 == task ==
 - flag if we run backend script for tasks (to avoid long wait periods for the users)
-- make a task that check if a task has been running for more than 15 minutes
 
 == rewrite stuff ==
 - rewrite all \Club\UserBundle\Entity\User to ClubUserBundle:User
-- consider subscription attributes instead of multiple columns
 - success / failure handler has to be more dynamic (might wait for a symfony upgrade) (symfony 2.1)
 - on success handler, consider forward and not redirect response?
 - remove all names from route, and use defaults
 - rewrite prePersist to PrePersist?? Will this work?
 - rewrite form.factory to $this->createForm()
 - create an address interface for Order/Cart/ProfileAddress
-- rewrite default settings for language and accounts
 
 == schema ==
-- cascade delete key on order delete to subscription and ticket coupon
-- cascade delete key on subscription to subscription location
-- unique config_key
-- consider using config_key and account_number as primary keys
 
 == graphics ==
 - event calendar view
 - event agenda view
-- style product page
-- style product listing
 - make sure all pages are html validated
 - make sure css are validated
-- put images on links
 - if twig has no date, it prints current timestamp (tasks last run at)
-- fix layout, single and double column
 
 == security ==
 - cannot edit orders that you do not own
