--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 == before next release ==
+- make the header h1 tag a module header
+- add a h2 on all pages too
 - make a test bundle for test fixtures
 - make sure email and phone is NOT mandatory
 - fix location dropdown to a prettier solution
